--- a/index.css
+++ b/index.css
@@ -4,60 +4,66 @@
     padding: 0;
 }
 
-body{
+body {
     background-color: #E0E0E0;
-    
 }
 
-.grid-container{
+.grid-container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(3,200px);
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 100px);
+    gap: 10px;
+    padding: 10px;
 }
 
 .grid-item {
     background-color: #333;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin: 5px;
 }
 
 .grid-item:nth-child(1) {
-    grid-column: span 1;
-    
+    grid-column: 1 / 3;
+    grid-row: 1 / 4;
 }
 
 .grid-item:nth-child(2) {
-    grid-column:  span 1;
+    grid-column: 3 / 5;
+    grid-row: 1 / 3;
 }
 
 .grid-item:nth-child(3) {
-    grid-column:  span 1;
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
 }
 
 .grid-item:nth-child(4) {
-    grid-column: span 1;
-    grid-row: span 2;
+    grid-column: 7 / 9;
+    grid-row: 1 / 4;
 }
 
 .grid-item:nth-child(5) {
-    grid-column:  1 / span 1;
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
 }
 
 .grid-item:nth-child(6) {
-    grid-column:  2/ span 2;
+    grid-column: 3 / 7;
+    grid-row: 3 / 6;
 }
 
 .grid-item:nth-child(7) {
-    grid-column:  span 2;
+    grid-column: 1 / 5;
+    grid-row: 6 / 8;
 }
 
 .grid-item:nth-child(8) {
-    grid-column:  span 1;
+    grid-column: 5 / 7;
+    grid-row: 6 / 8;
 }
 
 .grid-item:nth-child(9) {
-    grid-column: 4 / span 1;
+    grid-column: 7 / 9;
+    grid-row: 4 / 8;
 }
-
