--- a/index.css
+++ b/index.css
@@ -67,3 +67,39 @@ body {
     grid-column: 7 / 9;
     grid-row: 4 / 8;
 }
+
+.subgrid-container {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-template-rows: repeat(4, 80px);
+    gap: 20px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.subgrid-item {
+    background-color: #555;
+    padding: 5px;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.subgrid-row {
+    display: grid;
+    grid-template-rows: subgrid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.row-items {
+    background-color: #555;
+    padding: 10px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    height: 100px;
+    width: 100px;
+}
